--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,23 @@
 
 @layer utilities {
 
+   .hero-mask {
+    -webkit-mask-image: linear-gradient(
+      to bottom,
+      rgba(0,0,0,0) 0%,
+      rgba(0,0,0,1) 18%,
+      rgba(0,0,0,1) 70%,
+      rgba(0,0,0,0) 100%
+    );
+    mask-image: linear-gradient(
+      to bottom,
+      rgba(0,0,0,0) 0%,
+      rgba(0,0,0,1) 18%,
+      rgba(0,0,0,1) 70%,
+      rgba(0,0,0,0) 100%
+    );
+  }
+
   /* BASE */
   .bg-base {  
     background-color: rgba(8, 8, 10, 0.366);
